# MahjongRepo

./: .pre-commit-config.yaml  pyproject.toml
src/enum/: common.py
src/schema/: call.py  hand.py  tile.py
