[tool.poetry]
name = "mahjongrepo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
mypy = "^0.931"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
